udev: path_id - export path for platform block devices

Enrico Scholz <enrico.scholz@sigma-chemnitz.de>
>
> E.g. I have a platform with two sdhci controllers with different purposes.
> First slot is an external slot while second one is internal with a
> non-removable card.
>
> When there is a card in the external slot at boot, the non-removable card is
> named 'mmcblk1'; without the external card it is 'mmcblk0'.  Vice versa for the
> external card.

https://bugs.freedesktop.org/show_bug.cgi?id=52309